# datafuzz-ai

./: .env.example  .gitignore  IMPLEMENTACION_COMPLETADA.md  LICENSE  Makefile  README.md  datafuzz.db  docker-compose.yml  postgres-init.sql  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: Dockerfile
api/app/: main.py
api/app/routers/: __init__.py
apps/: __init__.py
apps/cli/: cli.py
apps/dashboard/: main.py
apps/reporting/: __init__.py
apps/reporting/renderers/: __init__.py  datafuzz.py  html.py
apps/reporting/renderers/templates/: summary.html
apps/reporting/templates/: datafuzz_report.html
apps/runner/: __init__.py  async_runner.py  http_runner.py
apps/worker/: main.py
cli/: cli.py
config/: __init__.py  constants.py  logging_config.py
core/: __init__.py  openapi.py  parser.py  runner.py
core/generators/: __init__.py
core/strategies/: __init__.py
engines/: __init__.py
engines/contract/: __init__.py  contract.py  generator.py  generator_clean.py
examples/: petstore_openapi.yaml  users_openapi.yaml
reporting/renderers/: html.py  json.py
reports/: invalids.html  no-mock.html  normal.html
reports/samples/: payloads.json  report.html
specs/examples/: openapi.yaml
storage/: __init__.py  db.py  models.py  repository.py
storage/postgres/: repository.py
tests/unit/: test_example.py  test_generator.py  test_persistence.py  test_run_parallel.py
training/sdv/: __init__.py
