[tool.poetry]
name = "datafuzz-ai"
version = "0.1.0"
description = "A project for data fuzzing and generation using various strategies."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
typer = "^0.4.0"
click = "^8.0.0"
sqlalchemy = "^1.4.0"
psycopg2 = "^2.9.0"
pydantic = "^1.8.0"
sdv = "^0.7.0"
kde = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
black = "^21.7b0"
isort = "^5.9.3"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
# dependencies = [
#   "typer[all]",
#   "httpx",
#   "kde<0.2.0,>=0.1.0",   # <-- eliminar o reemplazar esta línea
# ]
# ...existing code...