[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datafuzz-ai"
version = "0.1.0"
description = "API testing tool using OpenAPI specs"
authors = [{name = "Florencia Porcel", email = "florencia@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "typer",
    "httpx",
    "sqlalchemy",
    "jinja2",
    "pyyaml",
    "openapi-spec-validator",
    "psycopg2-binary",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
# dependencies = [
#   "typer[all]",
#   "httpx",
#   "kde<0.2.0,>=0.1.0",   # <-- eliminar o reemplazar esta línea
# ]
# ...existing code...